# vehicle_tracker_standalone

./: .aderc  .env  .gitignore  .gitmodules  IAC_workspace.code-workspace  README.md  compose.yml  humble-external-components.repos  nuget_packages.config  py_requirements.txt  ros2cs_ws.sln  vscode-extensions.list
Dockerfiles/: ros2cs_ws.dockerfile
scripts/: ade_entrypoint  ade_env.sh  bag_sensors_svl.sh  build.sh  camera_build.sh  camera_launch.sh  cameras_launch.sh  compose_up_cmd.sh  custom_build.sh  fix_git_submodules.sh  launch.sh  native_build.sh  native_launch.sh  native_msg_build.sh  native_msg_env.sh  native_sim_build.sh  native_sim_launch.sh  pull_cs_nuget_packages.sh  start_bagging.sh  test_build.sh  whitelist_file_exec_permissions.sh
setup_scripts/: hardware_interface_setup.sh  install_driver.sh  install_ros_galactic.sh  install_software.sh  master_setup.sh
src/dotnet_hello_world/: CMakeLists.txt  README.md  package.xml  use nuget packages with your ros2cs.md  velocity_listener.cs
src/multivehicle_awareness/: CMakeLists.txt  PlanningUtils.cs  Vehicle.cs  VehicleStates.cs  Vehicle_tracker.cs  Vehicle_tracker_node.cs  package.xml
src/ros2cs_ws_launch/: CMakeLists.txt  package.xml
src/ros2cs_ws_launch/launch/: master.launch.py  repub.launch.py
tools/ade_image/: Dockerfile  apt-packages
