<?xml version="1.0"?>
<package format="2">
  <name>multivehicle_awareness</name>
  <version>1.0.0</version>
  <description>package that deals with awareness of other agents on the track. How to track, avoid and overtake other vehicles.</description>
  <maintainer email="pannunzioalec@gmail.com">Alec Pannunzio</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_generator_cs</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>ros2cs_core</build_depend>
  <build_depend>ros2cs_common</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>deep_orange_msgs</build_depend>
  <depend>autoware_auto_msgs</depend>
  <depend>autoware_auto_geometry</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>blackandgold_msgs</depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>ros2cs_core</exec_depend>
  <exec_depend>ros2cs_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>clock_tools</exec_depend>

  <depend>tf2_dotnet</depend>
    
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
